force-app/main/default/objects/Test__mdt/Test__mdt.object-meta.xml
<CustomObject>
    <label>Test</label>
    <pluralLabel>Test</pluralLabel>
</CustomObject>