force-app/main/default/objects/Test__mdt/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <label>Test2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>