force-app/main/default/objects/Test__mdt/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Test</relationshipLabel>
    <relationshipName>Test</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>